--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">     <!-- Apple icon to save url in Home Screen -->
+    <link rel="apple-touch-icon" href="/static/images/apple-touch-icon.png">     <!-- Apple icon to save url in Home Screen -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/logo_app.ico">
-    <link rel="stylesheet" href="{{ url_for('assets/css', filename='main.css') }}">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/images/logo_app.ico">
+    <link rel="stylesheet" href="{{ url_for('static/css', filename='main.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- Bootstrap Font Icon CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
