--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                         {% if current_user.is_authenticated %}
                             <!--<a href="{{ url_for('main.index') }}" class="navbar-item">-->
                             <a href="{{ url_for('main.index') }}">
-                                <img src="/static/assets/logo_app_transp2.png" style="height: 30px">
+                                <img src="/static/images/logo_app_transp2.png" style="height: 30px">
                             </a>
                         {% endif %}
                     </div>
@@ -76,19 +76,19 @@
             <div class="row">
                 <ul class = "social">
                     <a style="text-decoration: none" href="https://twitter.com/ParraoWeather" target="_blank">
-                    <img src="/static/assets/twitter.png" width="18" height="15">
+                    <img src="/static/images/twitter.png" width="18" height="15">
                     </a>
                     <a style="text-decoration: none" href="https://instagram.com/richionline" target="_blank">
-                    <img src="/static/assets/instagram.png" width="15" height="15">
+                    <img src="/static/images/instagram.png" width="15" height="15">
                     </a>
                     <a style="text-decoration: none" href="https://www.linkedin.com/in/richionline/" target="_blank">
-                    <img src="/static/assets/linkedin.png" width="15" height="15">
+                    <img src="/static/images/linkedin.png" width="15" height="15">
                     </a>
                     <a style="text-decoration: none" href="https://www.youtube.com/channel/UCZ26BU86nleAzd_AgRRCXTg" target="_blank">
-                    <img src="/static/assets/youtube.png" width="20" height="15">
+                    <img src="/static/images/youtube.png" width="20" height="15">
                     </a>
                     <a style="text-decoration: none" href="https://github.com/falken20" target="_blank">
-                    <img src="/static/assets/github.png" width="20" height="20">
+                    <img src="/static/images/github.png" width="20" height="20">
                     </a>
                 </ul>
             </div>
