--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,11 +8,11 @@
   <tbody>
       <form method="POST">
           <tr>
-            <th scope="row"><img src="/static/assets/user.png" class="iconData"></th>
+            <th scope="row"><img src="/static/images/user.png" class="iconData"></th>
             <td title="User" class="appData">{{ name }}</td>
           </tr>
           <tr>
-              <th scope="row"><img src="/static/assets/calendar.png" class="iconData"></th>
+              <th scope="row"><img src="/static/images/calendar.png" class="iconData"></th>
               <td><input style="font-size: 50%"  type="date" name="date_from" value="{{ date_from }}"></td>
           </tr>
           <tr>
