--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,11 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.add_plant') }}" class="button is-primary is-small">
+                                <i class="bi bi-flower1" style="font-size: 20px" title="Add plant"></i>
+                            </a>
+                            {% endif %}
+                            {% if current_user.is_authenticated %}
                             <a href="{{ url_for('main.search') }}" class="button is-primary is-small">
                                 <i class="bi bi-search" style="font-size: 20px" title="Search"></i>
                             </a>
