--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -8,16 +8,16 @@
     <form method="POST">
 
       <div class="form-group">
-        <label for="product_url">Product URL</label>
-        <input type="text" class="form-control" id="product_url" name="product_url" placeholder="Product URL" maxlength="500">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" name="name" placeholder="Plant name" maxlength="100">
       </div>
       <div class="form-group">
-        <label for="product_desc">Description</label>
-        <input type="text" class="form-control" id="product_desc" name="product_desc" placeholder="Description" maxlength="150">
+        <label for="name_tech">Tech Name</label>
+        <input type="text" class="form-control" id="name_tech" name="name_tech" placeholder="Tech plant name" maxlength="100">
       </div>
       <div class="form-group">
-        <label for="product_url_photo">Photo URL</label>
-        <input type="text" class="form-control" id="product_url_photo" name="product_url_photo" placeholder="Photo URL" maxlength="500">
+        <label for="comment">Comments</label>
+        <input type="text" class="form-control" id="comment" name="comment" placeholder="Comments" maxlength="200">
       </div>
 
       <div class="row">
