--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,29 @@
+.logo-app {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: block;
+    padding: 0rem !important;
+}
+
+.navbar-brand {
+    padding-top: 0rem !important; 
+    padding-bottom: 0rem !important;    
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
+    margin-right: 0px !important;
+}
+
+.form-group {
+    margin-bottom: 0.5rem !important;
+    color: black;
+    text-align: left;
+    font-size: small;
+    font-weight: bold;
+}
+
+
+
 .mainPage {
     text-align: center;
     font-size: 2em;
@@ -82,10 +108,3 @@ th, td {
     min-height: 100vh; 
 }
 
-.navbar-brand {
-    padding-top: 0.1rem !important; 
-    padding-bottom: 0.1rem !important;    
-    padding-left: 0.1rem !important;
-    padding-right: 0.1rem !important;
-    margin-right: 0px !important;
-}
