--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                         {% if current_user.is_authenticated %}
                             <!--<a href="{{ url_for('main.index') }}" class="navbar-item">-->
                             <a href="{{ url_for('main.index') }}">
-                                <img src="/static/images/logo_app.png" style="height: 50px">
+                                <img src="/static/images/logo_app.png" class="logo-app">
                             </a>
                         {% endif %}
                     </div>
@@ -33,8 +33,8 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.add_plant') }}" class="button is-primary is-small">
-                                <i class="bi bi-flower1" style="font-size: 20px" title="Add plant"></i>
+                            <a href="{{ url_for('main.create_plant') }}" class="button is-primary is-small">
+                                <i class="bi bi-flower1" style="font-size: 20px" title="Add new plant"></i>
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
