--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -21,28 +21,41 @@
       </div>
 
       <div class="row">
-        <div class="form-group col-md-2">
-          <label for="product_price">Price</label>
-          <input type="number" class="form-control" name="product_price" id="product_price" placeholder="0" step="0.01" maxlength="10">
-        </div>
-        <div class="form-group col-md-2">
-          <label for="product_min_price">Min</label>
-          <input type="text" class="form-control" id="product_min_price" name="product_min_price" readonly>
-        </div>
-        <div class="form-group col-md-2">
-          <label for="product_max_price">Max</label>
-          <input type="text" class="form-control" id="product_max_price" name="product_max_price" readonly>
+        <div class="form-group">
+          <label for="watering_summer">Watering Summer</label>
+          <select class="custom-select" name="watering_summer" id="watering_summer">
+            <option value="1">1 week per month</option>
+            <option value="2">2 week per month</option>
+            <option value="3">3 week per month</option>
+            <option value="4">4 week per month</option>
+          </select>
+          <label for="watering_winter">Watering Winter</label>
+          <select class="custom-select" name="watering_winter" id="watering_winter">
+            <option value="1">1 week per month</option>
+            <option value="2">2 week per month</option>
+            <option value="3">3 week per month</option>
+            <option value="4">4 week per month</option>
+          </select>
+          <label for="direct_sun">Direct Sun</label>
+          <select class="custom-select" name="direct_sun" id="direct_sun">
+            <option value="1">No</option>
+            <option value="2">Partial</option>
+            <option value="3">Yes</option>
+          </select>
         </div>
       </div>
 
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label for="product_rating">Rating</label>
-          <input type="text" class="form-control" id="product_rating" name="product_rating" readonly>
-        </div>
-        <div class="form-group col-md-6">
-          <label for="product_reviews">Reviews</label>
-          <input type="text" class="form-control" id="product_reviews" name="product_reviews" readonly>
+      <!-- Example single danger button -->
+      <div class="btn-group">
+        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Action
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Separated link</a>
         </div>
       </div>
 
