--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container" style="margin-top:20px;">
 
-    <form method="POST">
+    <form method="POST" action="/plants">
 
       <div class="form-group">
         <label for="name">Name</label>
@@ -34,7 +34,7 @@
           <label for="watering_winter">Watering Winter</label>
           <select class="form-control" name="watering_winter" id="watering_winter">
             <option value="1" title="1 week per month">1 wpm</option>
-            <option value="2" title="2 week per month">2 wpm</option>
+            <option value="2" title="2 week per month" selected>2 wpm</option>
             <option value="3" title="3 week per month">3 wpm</option>
             <option value="4" title="4 week per month">4 wpm</option>
           </select>
@@ -48,11 +48,14 @@
           </select>
         </div>
       </div>
+      <div class="form-group">
+        <label for="spray">
+        <input type="checkbox" id="spray" name="spray" value="1">
+        Spray</label>
+      </div>
 
       <div class="form-group">
         <label for="image">Image</label>
-      </div>
-      <div class="form-group">
         <input type="file" class="form-control-file" id="image" name="image">
       </div>
 
