Solving linter and tests process

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         </tr>
         <tr>
             <th scope="row"><img src="/static/assets/calendar.png" class="iconData"></th>
-            <td title="Date from" colspan="2" class="appData" style="font-size: 50% !important">{{ date_from }}</td>
+            <td title="Date from" colspan="2" class="appData" style="font-size: 50% !important">{{ date_created }}</td>
         </tr>
         <tr>
             <th scope="row"><img src="/static/assets/home.png" class="iconData"></th>
