--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
           </tr>
           <tr>
               <th scope="row"><img src="/static/images/calendar.png" class="iconData"></th>
-              <td><input style="font-size: 50%"  type="date" name="date_from" value="{{ date_from }}"></td>
+              <td><input style="font-size: 50%"  type="date" name="date_created" value="{{ date_created }}"></td>
           </tr>
           <tr>
               <td colspan="2" style="width: 25%; vertical-align: middle; text-align: center;">
