--- a/templates/search.html
+++ b/templates/search.html
@@ -13,7 +13,7 @@
         </tr>
         <tr>
             <th scope="row"><img src="/static/assets/calendar.png" class="iconData"></th>
-            <td><input style="font-size: 50%"  type="date" name="date_from" value="{{ date_from }}"></td>
+            <td><input style="font-size: 50%"  type="date" name="date_created" value="{{ date_created }}"></td>
         </tr>
         <tr>
             <th scope="row"><img src="/static/assets/calendar.png" class="iconData"></th>
