Module adding plants

--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -24,7 +24,7 @@
         <div class="form-group col-sm">
           <label for="watering_summer">Watering Summer</label>
           <select class="form-control" name="watering_summer" id="watering_summer">
-            <option value="1" title="1 week per month">1 wpm</option>
+            <option value="1" title="1 week per month" selected>1 wpm</option>
             <option value="2" title="2 week per month">2 wpm</option>
             <option value="3" title="3 week per month">3 wpm</option>
             <option value="4" title="4 week per month">4 wpm</option>
