Coding create a plant

--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -50,7 +50,7 @@
       </div>
       <div class="form-group">
         <label for="spray">
-        <input type="checkbox" id="spray" name="spray" value="1">
+        <input type="checkbox" id="spray" name="spray" value="1" checked="true">
         Spray</label>
       </div>
 
