--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.show_grouped') }} " class="button is-primary is-small">
+                                  <i class="bi bi-columns-gap" style="font-size: 20px" title="Change vision"></i>
+                            </a>
                             <a href="{{ url_for('main.create_plant') }}" class="button is-primary is-small">
                                 <i class="bi bi-flower1" style="font-size: 20px" title="Add new plant"></i>
                             </a>
