--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -55,8 +55,8 @@
       </div>
 
       <div class="form-group">
-        <label for="image">Image</label>
-        <input type="file" class="form-control-file" id="image" name="image">
+        <label for="image">URL Photo</label>
+        <input type="text" class="form-control" id="image" name="image" placeholder="URL Photo" maxlength="200">
       </div>
 
       <button type="submit" class="btn btn-primary">Save</button>
