--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -25,8 +25,10 @@
             </tr>
             <tr>
                 <div class="row">
-                    <td><a class="btn btn-success btn-sm btn-block" href="{{url_for('main.update_plant', plant_id=plant.id)}}">Edit</a></td>
-                    <td><a class="btn btn-danger btn-sm btn-block" href="{{url_for('main.delete_plant', plant_id=plant.id)}}">Delete</a></td>
+                    <td colspan="3">
+                        <a class="btn btn-success btn-sm btn-block" href="{{url_for('main.update_plant', plant_id=plant.id)}}">Edit</a>
+                        <a class="btn btn-danger btn-sm btn-block" href="{{url_for('main.delete_plant', plant_id=plant.id)}}">Delete</a>
+                    </td>
                 </div>
             </tr>
         {% endfor %}
