Change styles in list plants

--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -15,6 +15,7 @@
                     <td style="width: 25%; text-align: center;">
                         <div><small>☀️ {{ plant.watering_summer }} wpm</small></div>
                         <div><small>❄️ {{ plant.watering_winter }} wpm</small></div>
+                        <div>💦<input type="checkbox" id="spray" name="spray" checked="{{ plant.spray }}"></div>
                     </td>
                     <td style="width:50%" colspan="2"> 
                         <div style="font-weight: bold;">{{ plant.name }}</div>
