--- a/templates/plant_list_group.html
+++ b/templates/plant_list_group.html
@@ -5,23 +5,21 @@
 <div class="container" style="text-align: center;">    
     <!--<div class="row row-cols-1 row-cols-md-3 g-4">-->
     <div class="row row-cols-1 row-cols-md-2 g-4">
-        {% for product in products %}
+        {% for plant in plants %}
         <div class="col p-2" style="min-width: 33%; max-width: 33%;">
             <div class="card h-100 p-1">
                 <div class="card-body p-1">
-                    <img src="{{ product.product_url_photo }}" height="75" style="max-width:100px;">
+                    <img src="{{ plant.image }}" height="75" style="max-width:100px;">
                 </div>
                 <div class="card-body p-1">
-                    <small style="font-weight: bold; font-size: medium;">{{ product.product_price }}€ </small><br>
-                    <small>Min: {{ product.product_min_price }} €</small><br>
-                    <small>{{ product.product_date_updated }} </small>
+                    <small>☀️ {{ plant.watering_summer }} wpm</small><br>
+                    <small>❄️ {{ plant.watering_winter }} wpm</small><br>
+                    <small>💦<input type="checkbox" id="spray" name="spray" checked="{{ plant.spray }}"></small>
                 </div>
                 <div class="card-body p-0">
-                    <a class="btn btn-warning btn-sm p-1" href="{{ url_for('refresh_data', product_id=product.product_id) }}">
-                    <i class="bi bi-arrow-clockwise" style="font-size: 15px" title="Update Amazon data"></i> </a>
-                    <a class="btn btn-success btn-sm p-1" href="{{url_for('edit_product', product_id=product.product_id)}}">
+                    <a class="btn btn-success btn-sm p-1" href="{{url_for('main.update_plant', plant_id=plant.id)}}">
                     <i class="bi bi-pencil-square" style="font-size: 15px" title="Edit"></i></a>
-                    <a class="btn btn-danger btn-sm p-1" href="{{url_for('delete_product', product_id=product.product_id)}}">
+                    <a class="btn btn-danger btn-sm p-1" href="{{url_for('main.delete_plant', plant_id=plant.id)}}">
                     <i class="bi bi-trash" style="font-size: 15px" title="Delete"></i></a>
                 </div>
             </div>
