Some style bugs

--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -24,19 +24,19 @@
         <div class="form-group col-sm">
           <label for="watering_summer">Watering Summer</label>
           <select class="form-control" name="watering_summer" id="watering_summer">
-            <option value="1" title="1 week per month" selected>1 wpm</option>
-            <option value="2" title="2 week per month">2 wpm</option>
-            <option value="3" title="3 week per month">3 wpm</option>
-            <option value="4" title="4 week per month">4 wpm</option>
+            <option value="1" title="1 times a month" selected>1 wpm</option>
+            <option value="2" title="2 times a month">2 wpm</option>
+            <option value="3" title="3 times a month">3 wpm</option>
+            <option value="4" title="4 times a month">4 wpm</option>
           </select>
         </div>
         <div class="form-group col-sm">
           <label for="watering_winter">Watering Winter</label>
           <select class="form-control" name="watering_winter" id="watering_winter">
-            <option value="1" title="1 week per month">1 wpm</option>
-            <option value="2" title="2 week per month" selected>2 wpm</option>
-            <option value="3" title="3 week per month">3 wpm</option>
-            <option value="4" title="4 week per month">4 wpm</option>
+            <option value="1" title="1 times a month">1 wpm</option>
+            <option value="2" title="2 times a month" selected>2 wpm</option>
+            <option value="3" title="3 times a month">3 wpm</option>
+            <option value="4" title="4 times a month">4 wpm</option>
           </select>
         </div>
         <div class="form-group col-sm">
