--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
     <link rel="shortcut icon" type="image/x-icon" href="/static/images/logo_app.ico">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/falken.js') }}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- Bootstrap Font Icon CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -38,11 +39,6 @@
                             </a>
                             <a href="{{ url_for('main.create_plant') }}" class="button is-primary is-small">
                                 <i class="bi bi-flower1" style="font-size: 20px" title="Add new plant"></i>
-                            </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.search') }}" class="button is-primary is-small">
-                                <i class="bi bi-search" style="font-size: 20px" title="Search"></i>
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
