--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -15,11 +15,17 @@
                     <td style="width:70%" colspan="2"> 
                         <div style="font-weight: bold;">{{ plant.name }}</div>
                         <div><small style="color: red; font-weight: bold;"> {{ plant.name_tech }} </small></div>
-                        <div><small>🌞 {{ plant.watering_summer }}/m
-                                    ❄️ {{ plant.watering_winter }}/m
-                                    💦<input type="checkbox" id="spray" name="spray" checked="{{ plant.spray }}">
-                                    🌝🌗❌
-                        </small></div>                        
+                        <div>
+                            <small>
+                                🌞 {{ plant.watering_summer }}/m
+                                ❄️ {{ plant.watering_winter }}/m
+                                <!-- TODO: Show the icon for spray-->
+                                <input type="checkbox" id="spray" name="spray" checked="{{ plant.spray }}" style="visibility:hidden"
+                                        onChange="activeVisibility('spray', 'spray_icon');">
+                                <label id="spray_icon" style="visibility:hidden">💦</label>
+                                🌝🌗❌
+                            </small>
+                        </div>                        
                     </td>
                 </div>
             </tr>
