--- a/templates/plant_list_group.html
+++ b/templates/plant_list_group.html
@@ -6,13 +6,15 @@
     <!--<div class="row row-cols-1 row-cols-md-3 g-4">-->
     <div class="row row-cols-1 row-cols-md-2 g-4">
         {% for plant in plants %}
-        <div class="col p-2" style="min-width: 33%; max-width: 33%;">
+        <div class="col p-2" style="min-width: 50%; max-width: 50%;">
             <div class="card h-100 p-1">
                 <div class="card-body p-1">
                     <img src="{{ plant.image }}" height="75" style="max-width:100px;">
                 </div>
                 <div class="card-body p-1">
-                    <small style="font-weight: bold;">{{ plant.name }}</small> <br>
+                    <small style="font-weight: bold;">{{ plant.name }}</small>
+                </div>
+                <div class="card-body p-1">
                     <small>🌞 {{ plant.watering_summer }} </small>
                     <small>❄️ {{ plant.watering_winter }} </small>
                     <small>💦 ⛔️<input type="checkbox" id="spray" name="spray" checked="{{ plant.spray }}"></small>
