Call js function onload page

--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
+<script>
+    window.onload = function() {
+        activeVisibility('spray', 'spray_icon');
+    }
+</script>
+
 <div class="container">    
 
     <table class="table table-sm" style="max-width: 600px;">
