--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -5,9 +5,11 @@
 {% block content %}
 <div class="container" style="margin-top:20px;">
 
-    <form method="POST" action="/plants">
+    <!-- <form method="POST" action="/plants"> -->
+    <form method="{{ form_method }}" action="/plants">
 
       <div class="form-group">
+        <input type="hidden" name="id" value="{{plant.id}}">
         <label for="name">Name</label>
         <input type="text" class="form-control" id="name" name="name" placeholder="Plant name" maxlength="100" value="{{plant.name}}">
       </div>
