--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -6,10 +6,10 @@
 <div class="container" style="margin-top:20px;">
 
     <!-- <form method="POST" action="/plants"> -->
-    <form method="{{ form_method }}" action="/plants">
-
+    <form method="POST" action="/plants">
+      <input type="hidden" name="_method" value="{{ form_method }}" />
+      <input type="hidden" name="id" value="{{plant.id}}">
       <div class="form-group">
-        <input type="hidden" name="id" value="{{plant.id}}">
         <label for="name">Name</label>
         <input type="text" class="form-control" id="name" name="name" placeholder="Plant name" maxlength="100" value="{{plant.name}}">
       </div>
