Isolating API urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                             <a href="{{ url_for('main.show_grouped') }} " class="button is-primary is-small">
                                   <i class="bi bi-columns-gap" style="font-size: 20px" title="Change vision"></i>
                             </a>
-                            <a href="{{ url_for('main.create_plant') }}" class="button is-primary is-small">
+                            <a href="{{ url_for('urls.page_create_plant') }}" class="button is-primary is-small">
                                 <i class="bi bi-flower1" style="font-size: 20px" title="Add new plant"></i>
                             </a>
                             {% endif %}
