--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -43,8 +43,8 @@
             <tr>
                 <div class="row">
                     <td colspan="2">
-                        <a class="btn btn-success btn-sm btn-block" href="{{url_for('main.update_plant', plant_id=plant.id)}}">Edit</a>
-                        <a class="btn btn-danger btn-sm btn-block" href="{{url_for('main.delete_plant', plant_id=plant.id)}}">Delete</a>
+                        <a class="btn btn-success btn-sm btn-block" href="{{url_for('urls.page_update_plant', plant_id=plant.id)}}">Edit</a>
+                        <a class="btn btn-danger btn-sm btn-block" href="{{url_for('urls.get_update_delete_plants', plant_id=plant.id)}}">Delete</a>
                     </td>
                 </div>
             </tr>
