--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -56,7 +56,7 @@
                 <div class="row">
                     <td colspan="2">
                         <a class="btn btn-success btn-sm btn-block" href="{{url_for('urls.view_update_plant', plant_id=plant.id)}}">Edit</a>
-                        <a class="btn btn-danger btn-sm btn-block" href="{{url_for('urls.get_update_delete_plants', plant_id=plant.id, ope='DELETE')}}">Delete</a>
+                        <a class="btn btn-danger btn-sm btn-block" href="{{url_for('urls.delete_plant', plant_id=plant.id, ope='DELETE')}}">Delete</a>
                     </td>
                 </div>
             </tr>
