--- a/templates/plant_list_group.html
+++ b/templates/plant_list_group.html
@@ -39,7 +39,7 @@
                 <div class="card-body p-0">
                     <a class="btn btn-success btn-sm p-1" href="{{url_for('urls.view_update_plant', plant_id=plant.id)}}">
                     <i class="bi bi-pencil-square" style="font-size: 15px" title="Edit"></i></a>
-                    <a class="btn btn-danger btn-sm p-1" href="{{url_for('urls.get_update_delete_plants', plant_id=plant.id)}}">
+                    <a class="btn btn-danger btn-sm p-1" href="{{url_for('urls.delete_plant', plant_id=plant.id)}}">
                     <i class="bi bi-trash" style="font-size: 15px" title="Delete"></i></a>
                 </div>
             </div>
