--- a/templates/plant_list_group.html
+++ b/templates/plant_list_group.html
@@ -37,10 +37,10 @@
                     </small>
                 </div>
                 <div class="card-body p-0">
-                    <a class="btn btn-success btn-sm p-1" href="{{url_for('urls.view_update_plant', plant_id=plant.id)}}">
-                    <i class="bi bi-pencil-square" style="font-size: 15px" title="Edit"></i></a>
-                    <a class="btn btn-danger btn-sm p-1" href="{{url_for('urls.delete_plant', plant_id=plant.id)}}">
-                    <i class="bi bi-trash" style="font-size: 15px" title="Delete"></i></a>
+                    <a class="btn btn-success btn-lg btn-block" href="{{url_for('urls.view_update_plant', plant_id=plant.id)}}">
+                        <i class="bi bi-pencil-square" style="font-size: 25px" title="Edit"></i></a>
+                    <a class="btn btn-danger btn-lg btn-block" href="{{url_for('urls.delete_plant', plant_id=plant.id)}}">
+                        <i class="bi bi-trash" style="font-size: 25px" title="Delete"></i></a>
                 </div>
             </div>
         </div>
