Delete calendar option an d resize buttons

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,6 +35,12 @@ p {
     max-height: 2.75rem !important;
 }
 
+.buttons_app {
+    margin-top: 0.1rem !important;
+    margin-bottom: 0.1rem !important;
+    margin-left: 0.1rem !important;
+    margin-right: 0.1rem !important;
+}
 
 
 
