--- a/templates/base.html
+++ b/templates/base.html
@@ -34,35 +34,30 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.show_grouped') }} " class="button is-primary is-small">
+                            <a href="{{ url_for('main.show_grouped') }} " class="button is-primary is-small buttons_app">
                                   <i class="bi bi-columns-gap" style="font-size: 20px" title="Change vision"></i>
                             </a>
-                            <a href="{{ url_for('urls.view_create_plant') }}" class="button is-primary is-small">
+                            <a href="{{ url_for('urls.view_create_plant') }}" class="button is-primary is-small buttons_app">
                                 <i class="bi bi-flower1" style="font-size: 20px" title="Add new plant"></i>
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.calendar') }}" class="button is-primary is-small">
-                                <i class="bi bi-calendar3" style="font-size: 20px" title="Calendar"></i>
-                            </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.profile') }}" class="button is-primary is-small">
+                            <a href="{{ url_for('main.profile') }}" class="button is-primary is-small buttons_app">
                                 <i class="bi bi-person-badge" style="font-size: 20px" title="Profile"></i>
                             </a>
                             {% endif %}
                             {% if current_user.is_anonymous %}
-                            <a href="{{ url_for('auth.login') }}" class="button is-primary is-small">
+                            <a href="{{ url_for('auth.login') }}" class="button is-primary is-small buttons_app">
                                 <i class="bi bi-box-arrow-in-right" style="font-size: 20px" title="Login"></i>
                             </a>
                             {% endif %}
                             {% if current_user.is_anonymous %}
-                            <a href="{{ url_for('auth.signup') }}" class="button is-primary is-small">
+                            <a href="{{ url_for('auth.signup') }}" class="button is-primary is-small buttons_app">
                                 <i class="bi bi-person-plus-fill" style="font-size: 20px" title="Sign up"></i>
                             </a>
                             {% endif %}
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.logout') }}" class="button is-danger is-small">
+                            <a href="{{ url_for('auth.logout') }}" class="button is-danger is-small buttons_app">
                                 <i class="bi bi-box-arrow-right" style="font-size: 20px" title="Logout"></i>
                             </a>
                             {% endif %}
