--- a/templates/plant_list_group.html
+++ b/templates/plant_list_group.html
@@ -4,17 +4,17 @@
 
 <div class="container" style="text-align: center;">    
     <!--<div class="row row-cols-1 row-cols-md-3 g-4">-->
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-md-2 g-3">
         {% for plant in plants %}
         <div class="col p-2" style="min-width: 50%; max-width: 50%;">
             <div class="card h-100 p-1">
-                <div class="card-body p-1">
+                <div class="card-body p-0">
                     <img src="{{ plant.image }}" height="75" style="max-width:100px;">
                 </div>
-                <div class="card-body p-1">
+                <div class="card-body p-0">
                     <small style="font-weight: bold;">{{ plant.name }}</small>
                 </div>
-                <div class="card-body p-1">
+                <div class="card-body p-0" style="font-size: smaller;">
                     <small>🌞 {{ plant.watering_summer }}/m </small>
                     <small>❄️ {{ plant.watering_winter }}/m </small>
                     <small>
@@ -37,9 +37,9 @@
                     </small>
                 </div>
                 <div class="card-body p-0">
-                    <a class="btn btn-success btn-lg btn-block" href="{{url_for('urls.view_update_plant', plant_id=plant.id)}}">
-                        <i class="bi bi-pencil-square" style="font-size: 25px" title="Edit"></i></a>
-                    <a class="btn btn-danger btn-lg btn-block" href="{{url_for('urls.delete_plant', plant_id=plant.id)}}">
+                    <a class="btn btn-success btn-sm btn-block buttons_app" href="{{url_for('urls.view_update_plant', plant_id=plant.id)}}">
+                        <i class="bi bi-pencil-square" style="font-size: 25px;" title="Edit"></i></a>
+                    <a class="btn btn-danger btn-sm btn-block buttons_app" href="{{url_for('urls.delete_plant', plant_id=plant.id)}}">
                         <i class="bi bi-trash" style="font-size: 25px" title="Delete"></i></a>
                 </div>
             </div>
