Some UX changes

--- a/templates/plant_list_group.html
+++ b/templates/plant_list_group.html
@@ -15,25 +15,31 @@
                     <small style="font-weight: bold;">{{ plant.name }}</small>
                 </div>
                 <div class="card-body p-0" style="font-size: smaller;">
-                    <small>🌞 {{ plant.watering_summer }}/m </small>
-                    <small>❄️ {{ plant.watering_winter }}/m </small>
                     <small>
-                        {% if plant.spray %}
-                            💦
-                        {% else %}
-                            ⛔️
-                        {% endif %}                        
-                    </small>
-                    <small>
-                        {% if plant.direct_sun == 1 %}
-                            🌑
-                        {% elif plant.direct_sun == 2 %}
-                            🌗
-                        {% elif plant.direct_sun == 3 %}
-                            🌞
-                        {% else %}
-                            ❓
-                        {% endif %}
+                        <table>
+                            <tr>
+                                <td>🌞 {{ plant.watering_summer }}/m</td>
+                                <td>❄️ {{ plant.watering_winter }}/m</td>
+                                <td>
+                                    {% if plant.spray %}
+                                        💦
+                                    {% else %}
+                                        ⛔️
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {% if plant.direct_sun == 1 %}
+                                        🌑
+                                    {% elif plant.direct_sun == 2 %}
+                                        🌗
+                                    {% elif plant.direct_sun == 3 %}
+                                        🌞
+                                    {% else %}
+                                        ❓
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        </table>
                     </small>
                 </div>
                 <div class="card-body p-0">
