--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -25,25 +25,30 @@
                         <div><small style="color: red; font-weight: bold;" id="name_tech"> {{ plant.name_tech }} </small></div>
                         <div>
                             <small>
-                                🌞 {{ plant.watering_summer }}/m
-                                ❄️ {{ plant.watering_winter }}/m
-                                {% if plant.spray %}
-                                    💦
-                                {% else %}
-                                    ⛔️
-                                {% endif %}
-                                <!--<input type="checkbox" id="spray" name="spray" checked="{{ plant.spray }}" style="visibility:visible"
-                                        onclick="activeVisibility('spray', 'spray_icon');">
-                                <label id="spray_icon" style="visibility:hidden" onload="activeVisibility('spray', 'spray_icon');">💦</label>-->
-                                {% if plant.direct_sun == 1 %}
-                                    🌑
-                                {% elif plant.direct_sun == 2 %}
-                                    🌗
-                                {% elif plant.direct_sun == 3 %}
-                                    🌞
-                                {% else %}
-                                    ❓
-                                {% endif %}
+                                <table>
+                                    <tr>
+                                        <td>🌞 {{ plant.watering_summer }}/m</td>
+                                        <td>❄️ {{ plant.watering_winter }}/m</td>
+                                        <td>
+                                            {% if plant.spray %}
+                                                💦
+                                            {% else %}
+                                                ⛔️
+                                            {% endif %}
+                                        </td>
+                                        <td>
+                                            {% if plant.direct_sun == 1 %}
+                                                🌑
+                                            {% elif plant.direct_sun == 2 %}
+                                                🌗
+                                            {% elif plant.direct_sun == 3 %}
+                                                🌞
+                                            {% else %}
+                                                ❓
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                </table>
                             </small>
                         </div>                        
                     </td>
