--- a/templates/plant_form.html
+++ b/templates/plant_form.html
@@ -61,7 +61,9 @@
         <input type="text" class="form-control" id="image" name="image" placeholder="URL Photo" maxlength="200" value="{{plant.image}}">
       </div>
 
-      <button type="submit" class="btn btn-primary">Save</button>
+      <div>
+        <button type="submit" class="btn btn-primary btn-lg btn-block">Save</button>
+      </div>
 
     </form>
 
