Fix packages version and center screens

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         {% endwith %}
         <form method="POST" action="/login">
             <div class="field">
-                <div class="control">
+                <div class="contro">
                     <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
                 </div>
             </div>
