--- a/templates/plant_list.html
+++ b/templates/plant_list.html
@@ -8,9 +8,9 @@
     }
 </script>
 
-<div class="container">    
+<div class="container" style="text-align: center;">    
 
-    <table class="table table-sm table-borderless" style="max-width: 600px;">
+    <table class="table table-sm table-borderless center_table" style="max-width: 600px;">
         <tbody>
         {% for plant in plants %}
             <tr style="font-size:smaller;">
