--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                         {% if current_user.is_authenticated %}
                             <!--<a href="{{ url_for('main.index') }}" class="navbar-item">-->
                             <a href="{{ url_for('main.index') }}">
-                                <img src="/static/images/logo_app_h.png" class="logo-app">
+                                <img src="/static/images/logo_app_h.png" style="height: 40px;"> <!-- class="logo-app" -->
                             </a>
                         {% endif %}
                     </div>
